Updated with lab provisioning fixes, update notes

--- a/LabEnvironment/vbox/templates/centos-ks.cfg.j2
+++ b/LabEnvironment/vbox/templates/centos-ks.cfg.j2
@@ -5,18 +5,10 @@ lang en_US.UTF-8
 keyboard us
 
 # This is the NAT network
-#network --device eth0 --onboot yes --bootproto dhcp
+network --device eth0 --onboot yes --bootproto dhcp
 
 # The Hostonly network
-#network --device eth1 --onboot yes --bootproto static --ip=192.168.200.10 --netmask=255.255.255.0 
-
-# The bridged network
-#network --device eth2 --onboot yes --bootproto dhcp
-
-# This is the Internal network
-#network --device eth3 --onboot yes --bootproto static --ip=172.16.1.1 --netmask=255.255.255.0
-#network --device eth4 --onboot yes --bootproto static --ip=172.16.100.1 --netmask=255.255.255.0
-#network --device eth5 --onboot yes --bootproto static --ip=172.16.200.1 --netmask=255.255.255.0
+network --device eth1 --onboot yes --bootproto dhcp 
 
 firewall --enabled --ssh --trust=eth1
 authconfig --enableshadow --passalgo=sha512
@@ -44,8 +36,6 @@ mkdir /home/ansible/.ssh
 cat >/home/ansible/.ssh/authorized_keys<<EOM
 {{ lookup('file', ansible_ssh_public_key_file) }}
 EOM
-chown -R ansible.ansible /home/ansible/.ssh/
-chmod 700 /home/ansible/.ssh
-chmod 600 /home/ansible/.ssh/*
+
 sed --in-place=.bak -e 's/^%wheel.*/%wheel ALL=\(ALL\) NOPASSWD: ALL/' /etc/sudoers
 %end
